# service/submit.go
@@ -1,0 +1,51 @@
+package service
+
+import (
+	"gin-gorm-oj/define"
+	"gin-gorm-oj/models"
+	"github.com/gin-gonic/gin"
+	"log"
+	"net/http"
+	"strconv"
+)
+
+// GetSubmitList
+// @Summary 提交列表
+// @Param page query int false "page"
+// @Param size query int false "size"
+// @Param status query string false "status"
+// @Param problem_identity query string false "problem_identity"
+// @Param user_identity query string false "user_identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /submitlist [get]
+func GetSubmitList(c *gin.Context) {
+	page, err := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
+	size, err := strconv.Atoi(c.DefaultQuery("size", define.DefaultSize))
+	if err != nil {
+		log.Println("get problem list page strconv error:", err)
+		return
+	}
+	//if page===1==>==0
+	page = (page - 1) * size
+	var count int64
+	list := make([]models.Submit, 0)
+	problemIdentity := c.Query("problem_identity")
+	userIdentity := c.Query("user_identity")
+	status, _ := strconv.Atoi(c.Query("status"))
+	tx := models.GetSubmitList(problemIdentity, userIdentity, status)
+	err = tx.Count(&count).Offset(page).Limit(size).Find(&list).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code":    -1,
+			"message": "Get submit List err:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count,
+		},
+	})
+}
